welcome.lessons.welcome.bat.bool2.AnswerCell.scala.code
def answerCell(isMorning:Boolean, isMom:Boolean, isAsleep:Boolean):Boolean = {
	if (isAsleep==true) {"false"}
	if (isMorning==true){
		if (isMom==true){"true"}
		else {"false"}
	}
	else {"true"}
}
